# iroh-webrtc-messenger

./: .gitignore
.cargo/: config.toml
.github/workflows/: pages.yml
crates/iroh-webrtc-transport/: Cargo.toml
docs/: index.html  iroh-webrtc-rust-browser-chat-room-1bf38fdafdbac172.js  iroh-webrtc-rust-browser-chat-room-1f9c3231fac66417.js  iroh-webrtc-rust-browser-chat-room-26e3c0c69d0d315c.js  iroh-webrtc-rust-browser-chat-room-46757013a5cd62f8.js  iroh-webrtc-rust-browser-chat-room-75398fa701eb1a39.js  iroh-webrtc-rust-browser-chat-room-bd1daa466a7d8242.js  iroh-webrtc-rust-browser-chat-room-c069712c70b0bb06.js  iroh-webrtc-rust-browser-chat-room-c35d090f85aa5986.js  iroh-webrtc-rust-browser-chat-room-cb3759ff0b92831d.js  iroh-webrtc-rust-browser-chat-room-e40328f157dc6602.js  iroh-webrtc-rust-browser-chat-room-eb9b5ff9db72713a.js  iroh-webrtc-rust-browser-chat-room-ee1340b03b20dd58.js
examples/rust-browser-chat-room/: Cargo.toml  README.md  Trunk.toml  VERSIONING.md  index.html
examples/rust-browser-chat-room/src/: commands.rs  crypto.rs  lib.rs  protocol.rs  state.rs  storage.rs  util.rs
examples/rust-browser-chat-room/src/components/: app.rs  auth.rs  chat_room.rs  mod.rs
