[package]
name = "iroh-webrtc-transport"
version = "0.1.0-alpha.2"
edition = "2024"
description = "WebRTC-backed custom transport primitives for Iroh"
readme = "README.md"
publish = true
license = "MIT"
repository = "https://github.com/SuddenlyHazel/iroh-webrtc-transport"
homepage = "https://github.com/SuddenlyHazel/iroh-webrtc-transport"
documentation = "https://docs.rs/iroh-webrtc-transport"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["browser", "native"]
browser = ["browser-main-thread"]
browser-main-thread = ["dep:js-sys", "dep:serde-wasm-bindgen", "dep:tracing-subscriber", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
native = ["dep:webrtc"]

[dependencies]
anyhow = "1"
blake3 = { version = "1", default-features = false }
bytes = "1"
iroh = { version = "0.98.2", default-features = false, features = ["tls-ring", "unstable-custom-transports"] }
iroh-base = "0.98.0"
n0-future = "0.3"
n0-watcher = "0.6"
noq-udp = "0.10"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = { version = "0.6", optional = true }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "rt", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"], optional = true }
js-sys = "0.3"
yew = { version = "0.23.0", features = ["csr"] }
base64 = "0.22.1"

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies.webrtc]
version = "0.17.1"
optional = true

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "rt", "sync", "time"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "=0.2.118", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "Crypto",
  "SubtleCrypto",
  "CryptoKey",
  "Storage",
  "TextEncoder",
  "BinaryType",
  "console",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "MessageEvent",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcDataChannelState",
  "RtcDataChannelType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
]
