[package]
name = "iroh-webrtc-rust-browser-chat-room"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
bytes = { version = "1", features = ["serde"] }
iroh = { version = "0.98", default-features = false }
iroh-gossip = { version = "0.98", default-features = false, features = ["net"] }
iroh-webrtc-transport = { path = "../../crates/iroh-webrtc-transport", default-features = false, features = ["browser"] }
n0-future = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
wasm-bindgen = "=0.2.118"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Crypto",
  "CryptoKey",
  "Document",
  "Element",
  "Event",
  "HtmlButtonElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "Location",
  "Node",
  "Storage",
  "SubtleCrypto",
  "TextEncoder",
  "Window",
] }
yew = { version = "0.23.0", features = ["csr"] }
base64 = "0.22.1"
js-sys = "0.3"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }

[profile.release]
opt-level = "z"      # optimize for size (vs "3" = speed). Big wasm shrink.
lto = true           # link-time optimization. Inlines across crates.
codegen-units = 1    # single codegen unit. Slower compile, smaller output.
strip = true         # strip symbols. Marginal but free.
panic = "abort"      # no unwinding. Smaller, slightly faster.
